<resources>
    <string name="app_name">Trend Cup</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">E-mail</string>
    <string name="password">Şifre</string>
    <string name="login">Giriş Yap</string>
    <string name="or"> veya </string>
    <string name="register">Kayıt Ol</string>
    <string name="name_surname">Ad Soyad</string>
    <string name="phone">Cep Telefonu</string>
    <string name="welcome">Hoşgeldiniz</string>
    <string name="loginAccount">Hesabınıza Giriş Yapın</string>
    <string name="register2">Yeni Kayıt</string>
    <string name="account">Hesap</string>
    <string name="campaign">Kampanyalar</string>
    <string name="cart">Sepet</string>
    <string name="homepage">Anasayfa</string>
    <string name="goCart">Sepet sayfasına git</string>
    <string name="PruductInfo">Ürün Açıklaması</string>
    <string name="trendcup">Trend Cup\'a </string>
    <string name="accountWelcome">Hoşgeldiniz,</string>
</resources>